# grpc_cmake_project_template

./: .travis.yml  CMakeLists.txt  README.md  build.sh  build_env.sh
examples/: CMakeLists.txt  example.cpp
include/: include
include/gen_target/: dbproxy.grpc.pb.h  dbproxy.pb.h
protos/: CMakeLists.txt
src/: CMakeLists.txt  test.cpp
src/gen_target/: proto_example.grpc.pb.cc  proto_example.pb.cc
tests/: CMakeLists.txt  test.cpp
