SET(EXAMPLE_TARGET _${EXAMPLE_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(${EXAMPLE_TARGET} example.cpp)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET} ${PROJECT_NAME} )

SET_TARGET_PROPERTIES(${EXAMPLE_TARGET} PROPERTIES OUTPUT_NAME ${EXAMPLE_BINARY})


